--- a/lankar/style.css
+++ b/lankar/style.css
@@ -1,4 +1,11 @@
 /*----- ALLMÄNT -----*/
+body, html{
+    height: 100%;
+    width: 100%;
+
+    min-width: 500px;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -77,7 +84,7 @@ nav {
     
     background-color: #FFDC5E;
     color: #fff;
-
+    
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 1.5rem;
     font-weight: bold;
@@ -88,6 +95,8 @@ nav {
 .navlist{
     display: flex;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     
     
     padding: 0;
@@ -169,7 +178,7 @@ nav {
 .scroll{
     overflow-y: scroll;
 
-    height: 80vh;
+    height: 90vh;
 }
 
 .scroll::-webkit-scrollbar{
@@ -246,11 +255,9 @@ ul {
     cursor: pointer;
 }
 #black {
-    position: absolute;
-
+    position: fixed;
     
-    
-    height: 2000px;
+    height: 100vh;
     width: 100%;
 
     background-color: hsla(0, 0%, 0%, 0.4);
@@ -267,30 +274,61 @@ ul {
 /*----- CONTENT -----*/
 .content {
     grid-area: C;
-
+    
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto 1fr;
+    padding: 40px;
+    
+    background-color: #999ebd;
+    color: #fff;
+    
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 2rem;
+    
+    box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+
+}
+
+.contentindex {
+    grid-area: C;
     
     padding: 40px;
     
     background-color: #999ebd;
     color: #fff;
-
+    
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 2rem;
-
+    
     box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto auto auto 1fr;
+
+}
+.container--ph {
+    padding-top: 48%;
+    margin-left: 10%;
+    position: relative;
+
+    min-height: 400px;
+
+    grid-column: 1/12;
+    grid-row: 4/5;
+
+    align-content: center;
+
+
 }
 
-#EU-karta {
-    display: block;
+
+.svg--responsive {
     position: absolute;
     top: 0;
     left: 0;
-    width: 800px;
-    height: 100%;
-}
+  }
 
 #ml:hover, #ml:hover {
     stroke: #FFDC5E  !important;
@@ -308,7 +346,7 @@ ul {
   
 
 #brödtext {
-    grid-column: 2/3;
+    grid-column: 2/12;
     grid-row: 1/2;
 }
 .karta{
@@ -316,22 +354,36 @@ ul {
     border-radius: 15px;
     display: inline-block;
 
-    background-color: #8b90ad;
-    
-    grid-column: 2/3;
-    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr;
 
-    max-width: 1000px;
-    
+    background-color: #8b90ad;
+
     box-shadow: 0px 0px 10px -3px #000000;
+
+    height: 100px;
 }
-svg {
-    border-top: white solid 15px;
-}
+
+
 #karttext {
     display: flex;
     justify-content: center;
     text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+
+    grid-column: 2/12;
+    grid-row: 2/3;
+}
+
+#beskrivning {
+    grid-column: 1/12;
+    grid-row: 3/4;
+
+    margin-left: 10%;
+}
+
+#EU-karta {
+    grid-row: 3/-1;
 }
 
 #info-box {
@@ -424,6 +476,59 @@ footer > a:hover {
 }
 .a2 {
     grid-area: A;
+}
+
+/*----- MEDIA ----*/
+@media all and (max-width: 3500px) {
+    .container--ph {
+        padding-top: 43%;
+    }
+}
+@media all and (max-width: 2500px) {
+    .container--ph {
+        padding-top: 38%;
+    }
+}
+@media all and (max-width: 2000px) {
+    .container--ph {
+        padding-top: 30%;
+    }
+}
+@media all and (max-width: 1500px) {
+    .container--ph {
+        padding-top: 20%;
+    }
+}
+@media all and (max-width: 1200px) {
+    .container--ph {
+        padding-top: 12%;
+    }
+}
+@media all and (max-width: 1026px) {
+    .container--ph {
+        padding-top: 4%;
+    }
+    nav{
+        font-size: 1rem;
+    }
+}
+@media all and (max-width: 900px) {
+    .container--ph {
+        padding-top: 1%;
+    }
+}
+@media all and (max-width: 800px) {
+    .container--ph {
+        padding-top: 1px;
+    }
+    .karta{
+        height: 100px;
+    }
+}
+@media all and (max-width: 764px) {
+    .navitem{
+        padding: 10px;
+    }
 }
 
 
