--- a/lankar/style.css
+++ b/lankar/style.css
@@ -3,6 +3,8 @@ body, html{
     height: 100%;
     width: 100%;
 
+    min-width: 600px;
+
 }
 
 body {
@@ -49,8 +51,10 @@ header {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 2rem;
 
+    min-width: 570px;
+    
     /*box-shadow: inset 0px -28px 13px 0px rgba(18, 18, 27, 0.336);*/
-
+    
 }
 #titel{
     
@@ -59,7 +63,8 @@ header {
     
     font-size: 4rem;
     font-weight: bold;
-
+    
+    min-width: 570px;
 }
 
 header > a {
@@ -72,6 +77,7 @@ header > a {
 
     width: 100%;
 
+    min-width: 570px;
 }
 
 /*----- NAV -----*/
@@ -92,6 +98,8 @@ nav {
     font-size: 1.5rem;
     font-weight: bold;
     text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+
+    min-width: 570px;
 }
 
 
