--- a/lankar/style.css
+++ b/lankar/style.css
@@ -590,4 +590,13 @@ footer a:hover {
     }
 }
 
+@-o-viewport{
+    zoom: 1.0;
+    width: extend-to-zoom;
+}
+@-ms-viewport{
+    zoom: 1.0;
+    width: extend-to-zoom;
+}
+
 
