--- a/lankar/style.css
+++ b/lankar/style.css
@@ -344,7 +344,7 @@ ul {
     margin-left: 10%;
     position: relative;
 
-    min-height: 400px;
+    min-height: 250px;
 
     grid-column: 1/12;
     grid-row: 4/5;
@@ -540,32 +540,32 @@ footer a:hover {
 /*----- MEDIA ----*/
 @media all and (max-width: 3500px) {
     .container--ph {
-        padding-top: 43%;
+        padding-top: 48%;
     }
 }
 @media all and (max-width: 2500px) {
     .container--ph {
-        padding-top: 38%;
+        padding-top: 45%;
     }
 }
 @media all and (max-width: 2000px) {
     .container--ph {
-        padding-top: 30%;
+        padding-top: 40%;
     }
 }
 @media all and (max-width: 1500px) {
     .container--ph {
-        padding-top: 20%;
+        padding-top: 35%;
     }
 }
 @media all and (max-width: 1200px) {
     .container--ph {
-        padding-top: 12%;
+        padding-top: 30%;
     }
 }
 @media all and (max-width: 1026px) {
     .container--ph {
-        padding-top: 4%;
+        padding-top: 25%;
     }
     nav{
         font-size: 1rem;
@@ -573,12 +573,12 @@ footer a:hover {
 }
 @media all and (max-width: 900px) {
     .container--ph {
-        padding-top: 1%;
+        padding-top: 17%;
     }
 }
 @media all and (max-width: 800px) {
     .container--ph {
-        padding-top: 1px;
+        padding-top: 10%;
     }
     .karta{
         height: 100px;
@@ -587,6 +587,14 @@ footer a:hover {
 @media all and (max-width: 764px) {
     .navitem{
         padding: 10px;
+    }
+}
+@media all and (max-width: 630px) {
+    .fruta {
+        grid-column: 2/3;
+    }
+    .fakta{
+        grid-column: 1/-1;
     }
 }
 
