--- a/lankar/style.css
+++ b/lankar/style.css
@@ -3,7 +3,8 @@ body, html{
     height: 100%;
     width: 100%;
 
-    min-width: 600px;
+    /* min-width: 600px; */
+    box-sizing: border-box;
 
 }
 
@@ -51,7 +52,7 @@ header {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 2rem;
 
-    min-width: 570px;
+
     
     /*box-shadow: inset 0px -28px 13px 0px rgba(18, 18, 27, 0.336);*/
     
@@ -63,8 +64,10 @@ header {
     
     font-size: 4rem;
     font-weight: bold;
+
+    padding: 0;
     
-    min-width: 570px;
+
 }
 
 header > a {
@@ -72,12 +75,10 @@ header > a {
     justify-content: center;
     
     background-color: rgba(0, 0, 0, 0.178);
-    padding: 10px;
 
 
     width: 100%;
 
-    min-width: 570px;
 }
 
 /*----- NAV -----*/
@@ -99,7 +100,6 @@ nav {
     font-weight: bold;
     text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
 
-    min-width: 570px;
 }
 
 
@@ -415,6 +415,9 @@ ul {
     grid-row: 3/4;
 
     margin-left: 10%;
+
+    height: auto;
+    width: 100%;
 }
 
 #EU-karta {
@@ -484,6 +487,16 @@ td {
 th, td, tr {
     padding: 10px;
 }
+
+.kallor a:hover {
+    color: gray;
+    
+    text-decoration: underline;
+}
+
+.kallor{
+    font-size: 1rem;
+}
 /*----- FOOTER -----*/
 footer {
     display: grid;
@@ -525,7 +538,7 @@ footer a:hover {
     border-bottom: 2px solid rgba(0, 0, 0, 0.26);
 
     height: 30px;
-    width: 110px;
+    width: auto;
 
 }
 
@@ -595,6 +608,12 @@ footer a:hover {
     }
     .fakta{
         grid-column: 1/-1;
+    }
+}
+
+@media all and (max-width: 540px) {
+    footer{
+        display: block;
     }
 }
 
