--- a/lankar/style.css
+++ b/lankar/style.css
@@ -459,12 +459,12 @@ ul {
     border: rgb(235, 232, 232) 5px solid;
     border-collapse: collapse;
     height: auto;
-
+    
     grid-column: 3/-1;
-
+    
     display: grid;
     grid-template-rows: auto 1fr ;
-
+    
     box-shadow: inset 0px 0px 3px 1px #000000;
 }
 .fruta > h3 {
@@ -473,8 +473,9 @@ ul {
 table {
     background-color: rgba(218, 218, 218, 0.26);
     color: black;
-
+    
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
 }
 th {
     text-align: center;
@@ -609,6 +610,11 @@ footer a:hover {
     .fakta{
         grid-column: 1/-1;
     }
+    tr, td, th {
+        font-size: 1rem;
+    }
+
+
 }
 
 @media all and (max-width: 540px) {
