--- a/lankar/style.css
+++ b/lankar/style.css
@@ -24,7 +24,7 @@ body {
 
     min-height: 100vh;
 
-    background-color:#8b90ad ;
+    background-color:#6a719b ;
 }
 
 alt{
@@ -96,7 +96,7 @@ nav {
     
     padding: 5px;
     
-    background-color: #FFDC5E;
+    background-color: #c59c06;
     color: #fff;
     
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -300,7 +300,7 @@ ul {
     padding: 40px;
 
     
-    background-color: #999ebd;
+    background-color: #485188;
     color: #fff;
     
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -314,7 +314,7 @@ ul {
     padding: 40px;
 
     
-    background-color: #999ebd;
+    background-color: #485188;
     color: #fff;
     
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -351,7 +351,7 @@ ul {
     
     padding: 40px;
     
-    background-color: #999ebd;
+    background-color: #485188a;
     color: #fff;
     
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
