--- a/lankar/style.css
+++ b/lankar/style.css
@@ -351,7 +351,7 @@ ul {
     
     padding: 40px;
     
-    background-color: #485188a;
+    background-color: #485188;
     color: #fff;
     
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
